# dify-dsl-validation

./: README.md  office_legacy_to_md.py  office_modern_to_md.py  pyproject.toml  validate_dify_dsl.py  validate_dify_plugin.py  validate_dsl_plugin_usage.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
sample/: nda_sample.txt  sample_data.xls  xls_extracted.txt
