[project]
name = "dify-dsl-validation"
version = "0.1.0"
description = "Dify DSL バリデータと Code ノード用 Markdown 変換スクリプト"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "xlwt>=1.3.0",
    "ruff>=0.6.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
